Fix default dark mode button visibility

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -63,12 +63,28 @@
 @media (prefers-color-scheme: light) {
     :root {
         @include light-theme;
+
+        #dark-mode-on {
+            display: inline;
+        }
+
+        #dark-mode-off {
+            display: none;
+        }
     }
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
         @include dark-theme;
+
+        #dark-mode-on {
+            display: none;
+        }
+
+        #dark-mode-off {
+            display: inline;
+        }
     }
 }
 
